--- a/package.json
+++ b/package.json
@@ -14,8 +14,17 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@fastify/type-provider-typebox": "^3.3.0",
+        "@paralleldrive/cuid2": "^2.2.1",
+        "@sinclair/typebox": "^0.29.6",
+        "ajv": "^8.12.0",
+        "ajv-formats": "^2.1.1",
         "fastify": "^4.20.0",
+        "yaml": "^2.3.1"
+    },
+    "devDependencies": {
         "prettier": "^3.0.0",
-        "typescript": "^5.1.6"
+        "typescript": "^5.1.6",
+        "vitest": "^0.33.0"
     }
 }
