--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "tsBuildInfoFile": "./dist/tsbuildinfo",
         "paths": {
             "#root/*": [
-                "./*"
+                "src/*"
             ],
         },
     },
