--- a/config.template.yaml
+++ b/config.template.yaml
@@ -1,6 +1,12 @@
 port: 5000
 externalUrl: http://localhost:5000
+trustProxy: true
+expose: false
 
 jwt:
     secret: E/=_r+a]H'8wHG](99"9'^X?K~+U\#]Gmged
     expiresIn: 1d
+
+log:
+    console: true
+    file: logs/main.log
