--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "ajv": "^8.12.0",
         "ajv-formats": "^2.1.1",
         "fastify": "^4.20.0",
+        "pino": "^8.14.1",
+        "pino-pretty": "^10.1.0",
         "yaml": "^2.3.1"
     },
     "devDependencies": {
