--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,15 +10,17 @@
         "outDir": "./dist",
         "strict": true,
         "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
         "resolveJsonModule": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
         "incremental": true,
         "tsBuildInfoFile": "./dist/tsbuildinfo",
+        "baseUrl": "src",
         "paths": {
             "#root/*": [
-                "src/*"
+                "./*"
             ],
         },
     },
