--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
     "name": "task-manager-api",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
     "type": "module",
     "imports": {
         "#root/*": "./dist/*"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "tsc",
+        "launch": "node dist/main.js",
+        "start": "run-s build launch",
+        "format": "prettier --write src/**/*.ts",
+        "test": "vitest run"
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
     "dependencies": {
         "@fastify/type-provider-typebox": "^3.3.0",
         "@paralleldrive/cuid2": "^2.2.1",
@@ -25,6 +24,7 @@
         "yaml": "^2.3.1"
     },
     "devDependencies": {
+        "npm-run-all": "^4.1.5",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6",
         "vitest": "^0.33.0"
