--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     },
     "devDependencies": {
         "@types/jsonwebtoken": "^9.0.2",
+        "@types/nodemailer": "^6.4.8",
         "bcryptjs": "^2.4.3",
         "drizzle-kit": "^0.19.10",
         "jsonwebtoken": "^9.0.1",
+        "nodemailer": "^6.9.4",
         "npm-run-all": "^4.1.5",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6",
