--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/bcryptjs": "^2.4.2",
         "ajv": "^8.12.0",
         "ajv-formats": "^2.1.1",
+        "bullmq": "^4.6.0",
         "drizzle-orm": "^0.27.2",
         "fastify": "^4.20.0",
         "fastify-plugin": "^4.5.1",
