--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,8 @@
     "explorer.fileNesting.expand": false,
     "explorer.fileNesting.patterns": {
         "package.json": ".editorconfig, pnpm*, .pnpm*, prettier*, .prettier*, tsconfig.*, .npmrc, .gitignore, drizzle.config.ts",
-        "*config.yaml": "$(capture)config.template.yaml",
+        "config*.yaml": "config$(capture).template.yaml",
         "*.ts": "$(capture).test.ts",
-        "docker-compose.yml": "Dockerfile, config.docker.yaml"
+        "docker-compose.yml": "Dockerfile"
     },
 }
