--- a/config.docker.template.yaml
+++ b/config.docker.template.yaml
@@ -14,8 +14,8 @@ log:
     file: logs/main.log
 
 database:
-    host: localhost
-    port: 4306
+    host: db
+    port: 3306
     database: main
     user: admin
     password: password
@@ -28,5 +28,5 @@ mailer:
         pass: 8WAQYgceSW5MghHU7Y
 
 redis:
-    host: localhost
-    port: 7379
+    host: redis
+    port: 6379
