--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
             - '5000:5000'
         depends_on:
             - db
+            - redis
 
     db:
         image: mysql:latest
@@ -19,5 +20,13 @@ services:
         volumes:
             - mysql-data:/var/lib/mysql
 
+    redis:
+        image: redis:latest
+        ports:
+            - '6379:6379'
+        volumes:
+            - redis-data:/data
+
 volumes:
     mysql-data:
+    redis-data:
