--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
         "@fastify/type-provider-typebox": "^3.3.0",
         "@paralleldrive/cuid2": "^2.2.1",
         "@sinclair/typebox": "^0.29.6",
-        "@types/bcryptjs": "^2.4.2",
         "ajv": "^8.12.0",
         "ajv-formats": "^2.1.1",
         "bullmq": "^4.6.0",
@@ -34,16 +33,17 @@
         "mysql2": "^3.5.2",
         "pino": "^8.14.1",
         "pino-pretty": "^10.1.0",
-        "yaml": "^2.3.1"
+        "yaml": "^2.3.1",
+        "jsonwebtoken": "^9.0.1",
+        "bcryptjs": "^2.4.3",
+        "nodemailer": "^6.9.4"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "@faker-js/faker": "^8.0.2",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/nodemailer": "^6.4.8",
-        "bcryptjs": "^2.4.3",
         "drizzle-kit": "^0.19.10",
-        "jsonwebtoken": "^9.0.1",
-        "nodemailer": "^6.9.4",
         "npm-run-all": "^4.1.5",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6",
