--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,9 @@ jobs:
 
         steps:
             - uses: actions/checkout@v3
-            - name: Copy config
-              run: cp /home/noroot/task-manager/config.docker.yaml ./
+            - name: Copy config and .env
+              run: |
+                  cp -r /home/noroot/task-manager/. ./
             - name: Build app image
               run: docker compose build
             - name: Start compose
