--- a/package.json
+++ b/package.json
@@ -25,22 +25,23 @@
         "@sinclair/typebox": "^0.29.6",
         "ajv": "^8.12.0",
         "ajv-formats": "^2.1.1",
+        "bcryptjs": "^2.4.3",
         "bullmq": "^4.6.0",
+        "close-with-grace": "^1.2.0",
         "drizzle-orm": "^0.27.2",
         "fastify": "^4.20.0",
         "fastify-plugin": "^4.5.1",
         "fastify-qs": "^4.0.2",
+        "jsonwebtoken": "^9.0.1",
         "mysql2": "^3.5.2",
+        "nodemailer": "^6.9.4",
         "pino": "^8.14.1",
         "pino-pretty": "^10.1.0",
-        "yaml": "^2.3.1",
-        "jsonwebtoken": "^9.0.1",
-        "bcryptjs": "^2.4.3",
-        "nodemailer": "^6.9.4"
+        "yaml": "^2.3.1"
     },
     "devDependencies": {
-        "@types/bcryptjs": "^2.4.2",
         "@faker-js/faker": "^8.0.2",
+        "@types/bcryptjs": "^2.4.2",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/nodemailer": "^6.4.8",
         "drizzle-kit": "^0.19.10",
