--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@faker-js/faker": "^8.0.2",
         "@types/bcryptjs": "^2.4.2",
         "@types/jsonwebtoken": "^9.0.2",
+        "@types/node": "^20.4.4",
         "@types/nodemailer": "^6.4.8",
         "drizzle-kit": "^0.19.10",
         "npm-run-all": "^4.1.5",
