--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
     "recommendations": [
         "EditorConfig.EditorConfig",
-        "esbenp.prettier-vscode",
+        "biomejs.biome",
         "redhat.vscode-yaml",
         "ZixuanChen.vitest-explorer"
     ]
