--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,8 @@
     "vitest.commandLine": "pnpm exec vitest",
     // formatting
     "editor.formatOnSave": true,
-    "[javascript][typescript][javascriptreact][typescriptreact][json][css]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "[javascript][typescript][javascriptreact][typescriptreact][json]": {
+        "editor.defaultFormatter": "biomejs.biome"
     },
     // debugging
     "debug.javascript.autoAttachFilter": "onlyWithFlag",
@@ -14,9 +14,9 @@
     "explorer.fileNesting.enabled": true,
     "explorer.fileNesting.expand": false,
     "explorer.fileNesting.patterns": {
-        "package.json": ".editorconfig, pnpm*, .pnpm*, prettier*, .prettier*, tsconfig.*, .npmrc, .gitignore, drizzle.config.ts, vite.config.ts",
+        "package.json": ".editorconfig, pnpm*, .pnpm*, biome.json, tsconfig.*, .npmrc, .gitignore, drizzle.config.ts, vite.config.ts",
         "config*.yaml": "config$(capture).template.yaml",
         "*.ts": "$(capture).test.ts",
         "docker-compose.yml": "Dockerfile"
-    },
+    }
 }
