--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,23 +2,12 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"type": "bun",
+			"internalConsoleOptions": "openOnSessionStart",
 			"request": "launch",
-			"type": "node",
 			"name": "Debug",
 			"program": "${workspaceFolder}/src/main.ts",
-			"runtimeExecutable": "${workspaceFolder}/node_modules/.bin/tsx",
-			"console": "internalConsole",
-			"internalConsoleOptions": "openOnSessionStart",
-			"skipFiles": [
-				"<node_internals>/**",
-				"${workspaceFolder}/node_modules/**"
-			],
-			"outputCapture": "std",
-			"sourceMaps": true,
-			"resolveSourceMapLocations": [
-				"${workspaceFolder}/dist/**",
-				"!**/node_modules/**"
-			]
+			"watchMode": "hot"
 		}
 	]
 }
