--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,21 @@
 {
-    // use worspace's version of typescript
-    "typescript.tsdk": "./node_modules/typescript/lib",
-    // hint vitest plugin to use pnpm
-    "vitest.commandLine": "pnpm exec vitest",
-    // formatting
-    "editor.formatOnSave": true,
-    "[javascript][typescript][javascriptreact][typescriptreact][json]": {
-        "editor.defaultFormatter": "biomejs.biome"
-    },
-    // debugging
-    "debug.javascript.autoAttachFilter": "onlyWithFlag",
-    // file nesting
-    "explorer.fileNesting.enabled": true,
-    "explorer.fileNesting.expand": false,
-    "explorer.fileNesting.patterns": {
-        "package.json": ".editorconfig, pnpm*, .pnpm*, biome.json, tsconfig.*, .npmrc, .gitignore, drizzle.config.ts, vite.config.ts",
-        "config*.yaml": "config$(capture).template.yaml",
-        "*.ts": "$(capture).test.ts",
-        "docker-compose.yml": "Dockerfile"
-    }
+	// use worspace's version of typescript
+	"typescript.tsdk": "./node_modules/typescript/lib",
+	// formatting
+	"editor.formatOnSave": true,
+	"[javascript][typescript][json][jsonc]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+	"[yaml]": {
+		"editor.defaultFormatter": "redhat.vscode-yaml"
+	},
+	// debugging
+	"debug.javascript.autoAttachFilter": "onlyWithFlag",
+	// file nesting
+	"explorer.fileNesting.enabled": true,
+	"explorer.fileNesting.expand": false,
+	"explorer.fileNesting.patterns": {
+		"package.json": ".editorconfig, pnpm*, .pnpm*, biome.json, tsconfig.*, .git*, drizzle.config.ts, bun.lockb",
+		"*.ts": "$(capture).test.ts"
+	}
 }
