--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.3.3/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
 	"organizeImports": {
-			"enabled": true
+		"enabled": true
 	},
 	"json": {
 		"parser": {
@@ -9,26 +9,22 @@
 		}
 	},
 	"javascript": {
-			"formatter": {
-					"trailingComma": "all",
-					"semicolons": "asNeeded"
-			}
+		"formatter": {
+			"trailingComma": "all",
+			"semicolons": "asNeeded"
+		}
 	},
 	"linter": {
-			"enabled": true,
-			"rules": {
-					"recommended": true
-			}
+		"enabled": true,
+		"rules": {
+			"recommended": true
+		}
 	},
 	"vcs": {
-			"enabled": true,
-			"clientKind": "git"
+		"enabled": true,
+		"clientKind": "git"
 	},
 	"files": {
-			"ignore": [
-					"package.json",
-					"node_modules/**/*",
-					"dist/**/*"
-			]
+		"ignore": ["package.json", "node_modules/**/*", "dist/**/*"]
 	}
 }
