--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"dev": "bun run src/main.ts",
 		"launch-migrate": "drizzle-kit generate:mysql",
-		"wire": "bun run scripts/wire.ts src {@}"
+		"wire": "bun run scripts/wire.ts src {@}",
+		"build": "bun build --target=node --outdir=dist src/main.ts"
 	},
 	"dependencies": {
 		"@bogeychan/elysia-logger": "^0.0.16",
@@ -21,6 +22,7 @@
 		"elysia": "^0.8.15",
 		"elysia-ip": "^0.0.7",
 		"elysia-rate-limit": "^2.0.1",
+		"js-yaml": "^4.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"mysql2": "^3.9.1",
 		"nodemailer": "^6.9.9",
