--- a/config/custom-environment-variables.yml
+++ b/config/custom-environment-variables.yml
@@ -6,5 +6,12 @@ jwt:
   secret: JWT_SECRET
 
 database:
+  host: DB_HOST
+  port: DB_PORT
+  database: DB_BASE
   user: DB_USER
   password: DB_PASSWORD
+
+redis:
+  host: REDIS_HOST
+  port: REDIS_PORT
