--- a/compose.yml
+++ b/compose.yml
@@ -1,13 +1,11 @@
-version: "3"
+version: "3.8"
 services:
   app:
     build: .
+    profiles: [production]
     restart: always
-    ports:
-      - "5000:5000"
-    depends_on:
-      - db
-      - redis
+    ports: ["5000:5000"]
+    depends_on: [db, redis]
 
   db:
     image: mysql:latest
@@ -17,18 +15,14 @@ services:
       MYSQL_DATABASE: ${DB_NAME:-main}
       MYSQL_USER: ${DB_USER:-admin}
       MYSQL_PASSWORD: ${DB_PASSWORD:-password}
-    ports:
-      - "3306:3306"
-    volumes:
-      - mysql-data:/var/lib/mysql
+    ports: ["3306:3306"]
+    volumes: [mysql-data:/var/lib/mysql]
 
   redis:
     image: redis:latest
     restart: always
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis-data:/data
+    ports: ["6379:6379"]
+    volumes: [redis-data:/data]
 
 volumes:
   mysql-data:
