--- a/compose.yml
+++ b/compose.yml
@@ -4,8 +4,9 @@ services:
     build: .
     profiles: [production]
     restart: always
-    ports: ["5000:5000"]
     depends_on: [db, redis]
+    environment:
+      - SERVICE_FQDN_AFFINE_5000
 
   db:
     image: mysql:latest
@@ -15,13 +16,11 @@ services:
       MYSQL_DATABASE: ${DB_NAME:-main}
       MYSQL_USER: ${DB_USER:-admin}
       MYSQL_PASSWORD: ${DB_PASSWORD:-password}
-    ports: ["3306:3306"]
     volumes: [mysql-data:/var/lib/mysql]
 
   redis:
     image: redis:latest
     restart: always
-    ports: ["6379:6379"]
     volumes: [redis-data:/data]
 
 volumes:
