--- a/compose.yml
+++ b/compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     depends_on: [db, redis]
     environment:
-      - SERVICE_FQDN_AFFINE_5000
+      - SERVICE_FQDN_APP_5000
 
   db:
     image: mysql:latest
